# MICDevCamp2014

./: AUTHORS  README.md
AndroidNativeClient/: AndroidManifest.xml
AndroidNativeClient/res/layout/: list_sites.xml  login.xml  photo.xml
AndroidNativeClient/res/values/: array.xml  strings.xml
AndroidNativeClient/src/com/orthancserver/phototrack/: ListSites.java  Login.java  Photo.java  PhotoTrackApi.java  RestToolbox.java  Shared.java
PhotoTrackServer/: CMakeLists.txt  Configuration.json
PhotoTrackServer/ApplicationSources/: ActiveSessions.cpp  ActiveSessions.h  Configuration.cpp  Configuration.h  Database.cpp  Database.h  IAuthenticator.h  IClonable.h  Photo.cpp  Photo.h  PhotoTrackApi.cpp  PhotoTrackApi.h  PrepareDatabase.sql  PropertyMap.cpp  PropertyMap.h  ServerPrecompiledHeaders.cpp  ServerPrecompiledHeaders.h  Site.cpp  Site.h  Toolbox.cpp  Toolbox.h  User.cpp  User.h  main.cpp
PhotoTrackServer/CMake/: DownloadPackage.cmake  EmbedResources.cmake  MinGWToolchain.cmake  OrthancCore.cmake
PhotoTrackServer/UnitTestsSources/: ActiveSessionsTests.cpp  ServerTestsPrecompiledHeaders.cpp  ServerTestsPrecompiledHeaders.h  UnitTestsMain.cpp
TestsRestApi/: RestToolbox.py  test_Photos.py  test_Sessions.py  test_Sites.py  test_Users.py
WebApplication/: Gruntfile.js  bower.json  package.json
WebApplication/app/: index.html
WebApplication/app/scripts/: app.js  main.js
WebApplication/app/scripts/controllers/: about.js  main.js  sites.js  users.js
WebApplication/app/scripts/services/: google-geocoder.js
WebApplication/app/styles/: main.scss
WebApplication/app/views/: about.html  main.html
WebApplication/app/views/photos/: edit.html  list.html
WebApplication/app/views/sites/: edit.html  editPhoto.html  list.html  photos.html
WebApplication/app/views/users/: edit.html  list.html
WebApplication/test/spec/controllers/: users.js
