# Orthanc PhotoTrack
# Copyright (C) 2014 - Gregory Art, Jean-Francois Colson, Benjamin
# Golinvaux, Sebastien Jodogne
#
# This program is free software: you can redistribute it and/or
# modify it under the terms of the GNU Affero General Public License
# as published by the Free Software Foundation, either version 3 of
# the License, or (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program. If not, see <http://www.gnu.org/licenses/>.


cmake_minimum_required(VERSION 2.8)

project(PhotoTrack)

include(CMake/OrthancCore.cmake)
include(CMake/EmbedResources.cmake)

#add_definitions(-DPHOTO_TRACK_ROOT="${CMAKE_SOURCE_DIR}")

EmbedResources(
  PREPARE_DATABASE ${CMAKE_CURRENT_SOURCE_DIR}/ApplicationSources/PrepareDatabase.sql
  )

set(SERVER_SOURCES
  ApplicationSources/ActiveSessions.cpp
  ApplicationSources/Configuration.cpp
  ApplicationSources/PhotoTrackApi.cpp
  ApplicationSources/PropertyMap.cpp
  ApplicationSources/Toolbox.cpp
  ApplicationSources/Photo.h
  ApplicationSources/Photo.cpp  
  ApplicationSources/Site.h
  ApplicationSources/Site.cpp  
  ApplicationSources/User.h
  ApplicationSources/User.cpp  
  ApplicationSources/Database.h
  ApplicationSources/Database.cpp
  )

set(UNIT_TESTS_SOURCES
  UnitTestsSources/ActiveSessionsTests.cpp
  UnitTestsSources/UnitTestsMain.cpp
  )

# Setup precompiled headers for Microsoft Visual Studio
if (${MSVC})
  add_definitions(-DORTHANC_USE_PRECOMPILED_HEADERS=1)

  ADD_VISUAL_STUDIO_PRECOMPILED_HEADERS(
    "ServerPrecompiledHeaders.h" "ApplicationSources/ServerPrecompiledHeaders.cpp" SERVER_SOURCES)

  ADD_VISUAL_STUDIO_PRECOMPILED_HEADERS(
    "ServerTestsPrecompiledHeaders.h" "UnitTestsSources/ServerTestsPrecompiledHeaders.cpp" UNIT_TESTS_SOURCES)
endif()

add_library(PhotoTrackLibrary STATIC
  ${SERVER_SOURCES}
  ${AUTOGENERATED_SOURCES}
  )

file(COPY
  ApplicationSources/PrepareDatabase.sql
  DESTINATION ${CMAKE_CURRENT_BINARY_DIR}
  )

add_executable(PhotoTrackServer ApplicationSources/main.cpp)

add_executable(UnitTests ${GTEST_SOURCES} ${UNIT_TESTS_SOURCES})
target_link_libraries(PhotoTrackServer GoogleLog PhotoTrackLibrary OrthancCore)
target_link_libraries(UnitTests GoogleLog PhotoTrackLibrary OrthancCore)
